Archive2/6a/a69778b599c8a1/output
main.cpp: In instantiation of 'Foo<T>::Foo(T) [with T = Bar]':
main.cpp:17:30:   required from here
main.cpp:10:18: error: cannot convert 'Bar' to 'int' in initialization
   Foo(T t) : t_{t} {} 
                  ^
main.cpp:10:18: warning: missing initializer for member 'Bar::y' [-Wmissing-field-initializers]
